Подчистка кода, исправления toString